--- a/src/pages/_reset.scss
+++ b/src/pages/_reset.scss
@@ -81,3 +81,10 @@ th {
   padding: 0;
   text-align: left;
 }
+
+input[type="date"]::-webkit-inner-spin-button,
+input[type="date"]::-webkit-calendar-picker-indicator,
+input[type="time"]::-webkit-calendar-picker-indicator {
+  display: none;
+  -webkit-appearance: none;
+}
