--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -3,23 +3,33 @@
 .button {
   @extend %text-md;
 
+  font-weight: 700;
   cursor: pointer;
   font-family: inherit;
   outline: none;
   border: 0;
   border-radius: 8px;
-  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
-  padding: 12px;
+  padding: 4px 8px;
   background-color: transparent;
-  color: (--cl-gray-700);
+  color: var(--cl-gray-600);
   transition: opacity 0.3s ease-in-out;
 
   &:hover {
     opacity: 0.8;
   }
 
+  &.isLoading {
+    pointer-events: none;
+    opacity: 0.7;
+  }
+
+  &.isLg {
+    padding: 12px;
+  }
+
   &.isPrimary {
     background-color: var(--cl-yellow);
     color: var(--cl-purple);
+    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
   }
 }
