--- a/src/containers/HomePage/HomePage.module.scss
+++ b/src/containers/HomePage/HomePage.module.scss
@@ -10,6 +10,11 @@
   display: flex;
   margin-top: 80px;
   gap: 20px;
+
+  @include mediaquery-tb() {
+    flex-direction: column-reverse;
+    margin-bottom: 20px;
+  }
 }
 
 .form {
@@ -20,7 +25,8 @@
   @extend %flex-center;
 
   cursor: pointer;
-  width: 739px;
+  max-width: 739px;
+  width: 100%;
   height: 445px;
   border-radius: 0px 64px;
   border: 1px dashed var(--cl-white);
